# wavelog-hamlib

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: builds-linux.yml  builds-macos.yml  builds-windows.yml  builds.yml  releases.yml  tests.yml
adif4rs/: Cargo.toml
adif4rs/src/: lib.rs
adif4rs/src/tag/: mod.rs  mode.rs  propagation_mode.rs
hamlib-client/: Cargo.toml
hamlib-client/src/: lib.rs  mode.rs
src/: config.rs  errors.rs  logging.rs  main.rs  ui.rs  wavelog.rs
