[package]
name = "wavelog-hamlib"
version = "0.9.1"
authors = ["Luca Cireddu <sardylan@gmail.com>"]
description = "Simple tool to connect Hamlib rigctld instance with Wavelog"
repository = "https://github.com/sardylan/wavelog-hamlib.git"
license = "GPL-3"
keywords = ["wavelog", "hamlib", "adif", "tokio", "reqwest"]
edition = "2021"

[dependencies]
adif4rs = { path = "adif4rs" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["cargo", "color", "derive", "env", "unicode"] }
hamlib-client = { path = "hamlib-client" }
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["std"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
